--- a/containerroot/interfacciaWeb/templates/agriveritas.html
+++ b/containerroot/interfacciaWeb/templates/agriveritas.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TecWeb - Landing page</title>
-     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <!-- Bootstrap CSS -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    
+     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='agriveritasStyle.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <!-- <link rel="icon" href="favicon.ico"> -->
 </head>
 <body>
@@ -44,7 +47,7 @@
                         </li>
                         <li class="userA">
                             <div class="card mb-3">
-                                <p>Ciao! Sono Agriveritas, una chatbot per le Agea, il territorio e i contadini</p>
+                                <p>Ciao! Sono Agriveritas, una chatbot per le Agea, il territorio e i coltivatori</p>
                             </div>
                         </li>
 
@@ -107,6 +110,7 @@
     crossorigin="anonymous">
     </script>
     <script src="{{ url_for('static', filename='agriveritasAnimations.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='ani.js') }}"></script> -->
 
 </body>
 </html>
