--- a/containerroot/interfacciaWeb/templates/agriveritas.html
+++ b/containerroot/interfacciaWeb/templates/agriveritas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TecWeb - Landing page</title>
+    <title>Agriveritas</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     
      <!-- Bootstrap CSS -->
